<resources>
    <string name="app_name">AppNotas</string>
    <string name="subtitle_app">Administra tu rendimiento escolar \nen un solo lugar</string>

    <string name="hint_id">Identificación</string>
    <string name="hint_password">Contraseña</string>
    <string name="text_button_login">LOGIN</string>
    <string name="title_activity_teacher">TeacherActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="textusername_menu">Edwin Yovany Orbes Villacorte</string>
    <string name="textemail_menu">yovany.dev@gmail.com</string>
    <string name="menu_item_account">Cuenta</string>
    <string name="menu_item_settings">Ajustes</string>
    <string name="menu_item_about">Acerca de</string>
    <string name="menu_item_logout">Cerrar Sesión</string>

    <string name="title_periods_list">Periodos Académicos</string>
    <string name="textperiod_card">Primer Periodo</string>
    <string name="textdate_card">20/11/2018</string>

    <string name="title_subjects_list">Asignaturas</string>
    <string name="text_name_subject">QUIMICA</string>

    <string name="title_grade_list">Grados</string>
    <string name="text_number_grade">8</string>
    <string name="text_name_grade">Grado octavo</string>
    <string name="title_tab_tasks">Actividades</string>
    <string name="title_tab_students">Estudiantes</string>
    <string name="title_tab_settings">Configuración</string>
    <string name="title_tab_performance">Rendimiento</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_id_student">108323454349</string>
    <string name="text_name_student">Edwin Yovany</string>
    <string name="text_surname_student">Orbes Villacorte</string>
    <string name="text_stamp_grade">Grado:</string>
    <string name="text_grade_student">Decimo</string>
    <string name="text_email_student">yovany.dev@gmail.com</string>
    <string name="textcard_type_task">EXAMEN</string>
    <string name="textcard_description_task">Evaluará los conocimientos de conjuntos y sus respectivas operaciones (UNION,INTERSECCIÓN, DIFERENCIA…</string>
    <string name="text_note">4.8</string>
    <string name="text_performance">Desempeño Superior</string>
    <string name="text_info_performance">Alcanza de 4.6 a 5.0 Máximo nivel esperado sin actividades de recuperación.</string>
    <string name="title_performance_student">Rendimiento del Estudiante</string>
    <string name="title_info_task">Información de la Actividad</string>
    <string name="text_type_task">Tipo de actividad</string>
    <string name="text_info_task">Descripción</string>
    <string name="hint_info_task">Conceptos a evaluar en esta Actividad.</string>
    <string name="title_new_task">Crear Actividad</string>
    <string name="text_type_assistance">NO ASISTIÓ - (TIENE EXCUSA)</string>
    <string name="title_student_assistance">Control de asistencia</string>
    <string name="title_task_qualify">Calificar actividad</string>
    <string name="text_note_value">0.0</string>
    <string name="text_lack">No asistió</string>
    <string name="text_lack_excuse">Tiene Excusa</string>
    <string name="text_assistance">Asistió</string>
</resources>
