<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/tabTasks"
        android:enabled="true"
        android:icon="@drawable/ic_task"
        android:title="@string/title_tab_tasks"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/tabStudents"
        android:enabled="true"
        android:icon="@drawable/ic_menu_account"
        android:title="@string/title_tab_students"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/tabSettings"
        android:enabled="true"
        android:icon="@drawable/ic_menu_settings"
        android:title="@string/title_tab_settings"
        app:showAsAction="ifRoom" />
</menu>