<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@android:color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    app:cardElevation="4dp">

    <ImageView
        android:id="@+id/ivPictureStudent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:layout_marginBottom="120dp"
        app:srcCompat="@drawable/img_student_boy" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_gravity="bottom"
        android:orientation="vertical"
        android:padding="8dp"
        android:paddingEnd="8dp"
        android:paddingStart="8dp">

        <TextView
            android:id="@+id/tvNameStudent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_name_student"
            android:textColor="@color/colorPrimaryText"
            android:textSize="24sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorDivider" />

        <TextView
            android:id="@+id/tvIdStudent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_id_student"
            android:textColor="@color/colorSecondaryText"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="1">

            <SeekBar
                android:id="@+id/sbNote"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.7"
                android:max="50"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:progress="1" />

            <TextView
                android:id="@+id/tvNoteValue"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:gravity="center"
                android:text="@string/text_note_value"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryText" />
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>